[tool.poetry]
name = "sampleee"
version = "0.1.0"
description = ""
authors = ["su-shubham <shubhamprajapati8268@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
